syntax = "proto3";
option java_package = "tech.lmru.cdsrfp.service";
option java_multiple_files = true;

package deliveryservice;

import "common.proto";

enum DeliveryStatusEnum {
    NEW = 0;
    APPROVED = 1;
    ONDELIVERY = 2;
    DELIVERED = 3;
    PARTIALLYDELIVERED = 4;
    RETURNONDELIVERY = 5;
    CANCELLED = 6;
}

message Delivery {
    int64 id = 1;
    int64 lat = 2;
    int64 lon = 3;
    string timeWindow = 4;
    User createUser = 5;
    string createdDate = 6;
    User lastUpdateUser = 7;
    string lastUpdateDate = 8;
    DeliveryStatusEnum status = 9;
    string deliveryDateMin = 10;
    string deliveryDateMax = 11;
    string comment = 12;
    string city = 13;
    string street = 14;
    string house = 15;
    string entrance = 16;
    string flat = 17;
    repeated DeliveryItem items = 18;
    Store store = 19;
}

message DeliveryItem {
    int64 id = 1;
    string productLMCode = 2;
    string productLMName = 3;
    int64 weight = 4;
    int64 volume = 5;
    int64 width = 6;
    int64 length = 7;
    int64 quantity = 8;
    int64 loadedQuantity = 9;
    int64 approvedQuantity = 10;
    DeliveryStatusEnum status = 11;
    Delivery delivery = 12;
}

message Store {
    int64 id = 1;
    enum StoreTypeEnum {
        OFFLINE = 0;
        ONLINE = 1;
    }
    StoreTypeEnum type = 2;
    string name = 3;
    string address = 4;
    string code = 5;
    int64 lat = 6;
    int64 lon = 7;
    string comment = 8;
    
}

message User {
    int32 id = 1;
    string code = 2;
    string name = 3;
    string password = 4;
}


message DeliveryAllResponse {
    repeated Delivery deliveries = 1;
}

service DeliveryService {
    rpc readAllDelivery(Empty) returns (DeliveryAllResponse);
}



