syntax = "proto3";
option java_package = "tech.lmru.cdsrfp.storeservice";
option java_multiple_files = true;

//package storeservice;

import "common.proto";


message StoreCreateResponse {
    int32 id = 1;
}

message StoreIdRequest {
    string id = 1;
}

message StoreGetAllResponse {
    repeated Store stores = 1;
}

message StoreDeleteResponse {
    bool success = 1;
}

service StoreService{
    rpc createOrUpdateStore(Store) returns (StoreCreateResponse) {}
    
    rpc getStoreById(StoreIdRequest) returns (Store) {}
    
    rpc getAllStore(Empty) returns (StoreGetAllResponse) {}
    
    rpc deleteStoreById(StoreIdRequest) returns (StoreDeleteResponse) {}  
}
